force-app/main/default/objects/Opportunity/fields/AddressDetails__c.field-meta.xml
<CustomField>
    <fullName>AddressDetails__c</fullName>
    <label>Address Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>