force-app/main/default/objects/Opportunity/fields/ApplicationDetails__c.field-meta.xml
<CustomField>
    <fullName>ApplicationDetails__c</fullName>
    <description>지원내역</description>
    <label>Application Details</label>
    <type>TextArea</type>
</CustomField>