force-app/main/default/objects/Opportunity/fields/ApplicationRate__c.field-meta.xml
<CustomField>
    <fullName>ApplicationRate__c</fullName>
    <description>순매출의 %를 기준</description>
    <inlineHelpText>순매출의 %를 기준으로 작성, 설명회 당시 기재하지 않거나 못한 경우 괄호 안에 % 기입.</inlineHelpText>
    <label>Application Rate (%)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>