force-app/main/default/objects/Opportunity/fields/BidDetermineMethod__c.field-meta.xml
<CustomField>
    <fullName>BidDetermineMethod__c</fullName>
    <label>Bid Determine Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>