force-app/main/default/objects/Opportunity/fields/BidEndDate__c.field-meta.xml
<CustomField>
    <fullName>BidEndDate__c</fullName>
    <label>BidEndDate</label>
    <type>Date</type>
</CustomField>