force-app/main/default/objects/Opportunity/fields/BidLetterSubmitCloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>BidLetterSubmitCloseDateTime__c</fullName>
    <description>귝방전자조달시스템 입찰서 제출 마감일시</description>
    <label>Bid Letter Submit Close Date/Time</label>
    <type>DateTime</type>
</CustomField>