force-app/main/default/objects/Opportunity/fields/BidNoticeCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>BidNoticeCompanyCode__c</fullName>
    <description>공고 입찰 회사 코드</description>
    <label>Bid Notice Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>