force-app/main/default/objects/Opportunity/fields/BidNoticeDetail__c.field-meta.xml
<CustomField>
    <fullName>BidNoticeDetail__c</fullName>
    <formula>IF(ISBLANK(BidNoticeDetailUrl__c)  , &quot;&quot; , HYPERLINK(  BidNoticeDetailUrl__c , &quot;상세보기&quot;,&quot;_blank&quot;))</formula>
    <label>Bid Notice Detail</label>
    <type>Text</type>
</CustomField>