force-app/main/default/objects/Opportunity/fields/BidNoticeName__c.field-meta.xml
<CustomField>
    <fullName>BidNoticeName__c</fullName>
    <description>나라장터 입찰 공고명 (mapping)</description>
    <label>Bid Notice Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>