force-app/main/default/objects/Opportunity/fields/BidNoticeNumber__c.field-meta.xml
<CustomField>
    <fullName>BidNoticeNumber__c</fullName>
    <description>나라장터 입찰 공고 번호 (mapping)</description>
    <externalId>true</externalId>
    <label>Bid Notice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>