force-app/main/default/objects/Opportunity/fields/BidNoticeSource__c.field-meta.xml
<CustomField>
    <fullName>BidNoticeSource__c</fullName>
    <label>Bid Notice Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>