force-app/main/default/objects/Opportunity/fields/BidNoticeStatus__c.field-meta.xml
<CustomField>
    <fullName>BidNoticeStatus__c</fullName>
    <label>Bid Notice Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>