force-app/main/default/objects/Opportunity/fields/BidOpenDateTime__c.field-meta.xml
<CustomField>
    <fullName>BidOpenDateTime__c</fullName>
    <description>나라장터 입찰 공고 개찰 일시(mapping)</description>
    <label>Bid Open Date/Time</label>
    <type>DateTime</type>
</CustomField>