force-app/main/default/objects/Opportunity/fields/BidOpenPlace__c.field-meta.xml
<CustomField>
    <fullName>BidOpenPlace__c</fullName>
    <label>Bid Open Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>