force-app/main/default/objects/Opportunity/fields/BidQualifyRegistCloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>BidQualifyRegistCloseDateTime__c</fullName>
    <description>나라장터 입찰 참가 자격 등록 마감 일시(mapping)</description>
    <label>Bid Qualify Regist Close Date/Time</label>
    <type>DateTime</type>
</CustomField>