force-app/main/default/objects/Opportunity/fields/BidRegistCloseDateTime__c.field-meta.xml
<CustomField>
    <fullName>BidRegistCloseDateTime__c</fullName>
    <label>Bid Regist Close Date/Time</label>
    <type>DateTime</type>
</CustomField>