force-app/main/default/objects/Opportunity/fields/BidStartDate__c.field-meta.xml
<CustomField>
    <fullName>BidStartDate__c</fullName>
    <label>BidStartDate</label>
    <type>Date</type>
</CustomField>