force-app/main/default/objects/Opportunity/fields/BidStatus__c.field-meta.xml
<CustomField>
    <fullName>BidStatus__c</fullName>
    <label>Bid Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>