force-app/main/default/objects/Opportunity/fields/BondManagementPlan__c.field-meta.xml
<CustomField>
    <fullName>BondManagementPlan__c</fullName>
    <label>Bond Management Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>