force-app/main/default/objects/Opportunity/fields/Commision__c.field-meta.xml
<CustomField>
    <fullName>Commision__c</fullName>
    <label>Commision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>