force-app/main/default/objects/Opportunity/fields/CommisionPercentage__c.field-meta.xml
<CustomField>
    <fullName>CommisionPercentage__c</fullName>
    <label>Commision(%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>