force-app/main/default/objects/Opportunity/fields/CommonSupplierRegionLimitY_N__c.field-meta.xml
<CustomField>
    <fullName>CommonSupplierRegionLimitY_N__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Common Supplier Region Limit Y/N</label>
    <type>Checkbox</type>
</CustomField>