force-app/main/default/objects/Opportunity/fields/ContractDescription__c.field-meta.xml
<CustomField>
    <fullName>ContractDescription__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>