force-app/main/default/objects/Opportunity/fields/ContractExpireDate__c.field-meta.xml
<CustomField>
    <fullName>ContractExpireDate__c</fullName>
    <label>ContractExpireDate</label>
    <type>Date</type>
</CustomField>