force-app/main/default/objects/Opportunity/fields/ContractPeriod__c.field-meta.xml
<CustomField>
    <fullName>ContractPeriod__c</fullName>
    <label>ContractPeriod</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1년</fullName>
            </value>
            <value>
                <fullName>2년</fullName>
            </value>
            <value>
                <fullName>3년</fullName>
            </value>
            <value>
                <fullName>4년</fullName>
            </value>
            <value>
                <fullName>5년</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>