force-app/main/default/objects/Opportunity/fields/ContractSignMethod__c.field-meta.xml
<CustomField>
    <fullName>ContractSignMethod__c</fullName>
    <label>Contract Sign Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>