force-app/main/default/objects/Opportunity/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <label>Contract Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>