force-app/main/default/objects/Opportunity/fields/CurrentCostRate__c.field-meta.xml
<CustomField>
    <fullName>CurrentCostRate__c</fullName>
    <label>CurrentCostRate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>