force-app/main/default/objects/Opportunity/fields/CurrentPartner__c.field-meta.xml
<CustomField>
    <fullName>CurrentPartner__c</fullName>
    <label>Current Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>