force-app/main/default/objects/Opportunity/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <description>마감기한</description>
    <label>Deadline</label>
    <type>DateTime</type>
</CustomField>