force-app/main/default/objects/Opportunity/fields/DeliveryCondition__c.field-meta.xml
<CustomField>
    <fullName>DeliveryCondition__c</fullName>
    <label>Delivery Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>