force-app/main/default/objects/Opportunity/fields/Dropsize__c.field-meta.xml
<CustomField>
    <fullName>Dropsize__c</fullName>
    <label>Dropsize</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>