force-app/main/default/objects/Opportunity/fields/Etc__c.field-meta.xml
<CustomField>
    <fullName>Etc__c</fullName>
    <label>Etc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>