force-app/main/default/objects/Opportunity/fields/Excl__c.field-meta.xml
<CustomField>
    <fullName>Excl__c</fullName>
    <label>Excl</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>