force-app/main/default/objects/Opportunity/fields/ExpectedNoticeMonth__c.field-meta.xml
<CustomField>
    <fullName>ExpectedNoticeMonth__c</fullName>
    <description>공고예정월</description>
    <label>Expected Notice Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>