force-app/main/default/objects/Opportunity/fields/ExtraService__c.field-meta.xml
<CustomField>
    <fullName>ExtraService__c</fullName>
    <label>Extra Service</label>
    <length>255</length>
    <type>Text</type>
</CustomField>