force-app/main/default/objects/Opportunity/fields/FieldBriefing_BidDepositKRWmillion__c.field-meta.xml
<CustomField>
    <fullName>FieldBriefing_BidDepositKRWmillion__c</fullName>
    <label>FieldBriefing_BidDepositKRWmillion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>