force-app/main/default/objects/Opportunity/fields/FieldBriefing_BiddingMethod__c.field-meta.xml
<CustomField>
    <fullName>FieldBriefing_BiddingMethod__c</fullName>
    <label>FieldBriefing_BiddingMethod</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>공개입찰</fullName>
            </value>
            <value>
                <fullName>지명입찰</fullName>
            </value>
            <value>
                <fullName>단독입찰</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>