force-app/main/default/objects/Opportunity/fields/FieldBriefing_BusinessNumber__c.field-meta.xml
<CustomField>
    <fullName>FieldBriefing_BusinessNumber__c</fullName>
    <label>FieldBriefing_BusinessNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>