force-app/main/default/objects/Opportunity/fields/FieldBriefing_ContractEndDate__c.field-meta.xml
<CustomField>
    <fullName>FieldBriefing_ContractEndDate__c</fullName>
    <label>FieldBriefing_ContractEndDate</label>
    <type>Date</type>
</CustomField>