force-app/main/default/objects/Opportunity/fields/FieldBriefing_ContractSettlementDate__c.field-meta.xml
<CustomField>
    <fullName>FieldBriefing_ContractSettlementDate__c</fullName>
    <label>FieldBriefing_ContractSettlementDate</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>당일입금</fullName>
            </value>
            <value>
                <fullName>당월마감후 120일이내입금</fullName>
            </value>
            <value>
                <fullName>1일마감후1일이내입금</fullName>
            </value>
            <value>
                <fullName>10일마감후5일이내입금</fullName>
            </value>
            <value>
                <fullName>10일마감후25일이내입금</fullName>
            </value>
            <value>
                <fullName>10일마감후60일이내입금</fullName>
            </value>
            <value>
                <fullName>15일마감후1일이내입금</fullName>
            </value>
            <value>
                <fullName>15일마감후5일이내입금</fullName>
            </value>
            <value>
                <fullName>15일마감후10일이내입금</fullName>
            </value>
            <value>
                <fullName>15일마감후15일이내입금</fullName>
            </value>
            <value>
                <fullName>15일마감후25일이내입금</fullName>
            </value>
            <value>
                <fullName>15일마감후30일이내입금</fullName>
            </value>
            <value>
                <fullName>20일마감후40일이내입금(Fix형)</fullName>
            </value>
            <value>
                <fullName>25일마감후40일이내입금(Fix형)</fullName>
            </value>
            <value>
                <fullName>25일마감후65일이내입금(Fix형)</fullName>
            </value>
            <value>
                <fullName>당월마감후1일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후5일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후7일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후10일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후11일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후14일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후15일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후16일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후20일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후25일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후30일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후35일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후40일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후45일이내입금</fullName>
            </value>
            <value>
                <fullName>당월마감후50일이내입금</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>