force-app/main/default/objects/Opportunity/fields/FieldBriefing_ContractStartDate__c.field-meta.xml
<CustomField>
    <fullName>FieldBriefing_ContractStartDate__c</fullName>
    <label>FieldBriefing_ContractStartDate</label>
    <type>Date</type>
</CustomField>