force-app/main/default/objects/Opportunity/fields/FieldBriefing_CorporateType__c.field-meta.xml
<CustomField>
    <fullName>FieldBriefing_CorporateType__c</fullName>
    <label>FieldBriefing_CorporateType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>법인</fullName>
            </value>
            <value>
                <fullName>개인</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>