force-app/main/default/objects/Opportunity/fields/FieldBriefing_Note__c.field-meta.xml
<CustomField>
    <fullName>FieldBriefing_Note__c</fullName>
    <label>FieldBriefing_Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>