force-app/main/default/objects/Opportunity/fields/FieldBriefing_RequestList__c.field-meta.xml
<CustomField>
    <fullName>FieldBriefing_RequestList__c</fullName>
    <label>FieldBriefing_RequestList</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>입찰참가</fullName>
            </value>
            <value>
                <fullName>보증보험날인</fullName>
            </value>
            <value>
                <fullName>계약서날인</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>