force-app/main/default/objects/Opportunity/fields/FieldBriefing_SalesVolumeKRWmillion__c.field-meta.xml
<CustomField>
    <fullName>FieldBriefing_SalesVolumeKRWmillion__c</fullName>
    <label>FieldBriefing_SalesVolumeKRWmillion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>