force-app/main/default/objects/Opportunity/fields/FieldBriefing_TransactionDeposit__c.field-meta.xml
<CustomField>
    <fullName>FieldBriefing_TransactionDeposit__c</fullName>
    <label>FieldBriefing_TransactionDeposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>