force-app/main/default/objects/Opportunity/fields/FinalClient__c.field-meta.xml
<CustomField>
    <fullName>FinalClient__c</fullName>
    <label>Final Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>