force-app/main/default/objects/Opportunity/fields/FINCLEGenlPaymentRate__c.field-meta.xml
<CustomField>
    <fullName>FINCLEGenlPaymentRate__c</fullName>
    <label>FINCLE Genl Payment Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>