force-app/main/default/objects/Opportunity/fields/FINCLExclReceiptRate__c.field-meta.xml
<CustomField>
    <fullName>FINCLExclReceiptRate__c</fullName>
    <label>FINCL Excl Receipt Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>