force-app/main/default/objects/Opportunity/fields/fm_BusinessAmount__c.field-meta.xml
<CustomField>
    <fullName>fm_BusinessAmount__c</fullName>
    <formula>presmptPrce__c +  VAT__c</formula>
    <label>BusinessAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>