force-app/main/default/objects/Opportunity/fields/fm_BusinessPathLv1__c.field-meta.xml
<CustomField>
    <fullName>fm_BusinessPathLv1__c</fullName>
    <formula>Text( Account.BusinessPathLv1__c )</formula>
    <label>BusinessPathLv1</label>
    <type>Text</type>
</CustomField>