force-app/main/default/objects/Opportunity/fields/fm_BusinessPathLv2__c.field-meta.xml
<CustomField>
    <fullName>fm_BusinessPathLv2__c</fullName>
    <formula>Text( Account.BusinessPathLv2__c )</formula>
    <label>BusinessPathLv2</label>
    <type>Text</type>
</CustomField>