force-app/main/default/objects/Opportunity/fields/fm_BusinessPathLv3__c.field-meta.xml
<CustomField>
    <fullName>fm_BusinessPathLv3__c</fullName>
    <formula>Text( Account.BusinessPathLv3__c )</formula>
    <label>BusinessPathLv3</label>
    <type>Text</type>
</CustomField>