force-app/main/default/objects/Opportunity/fields/fm_IsExAccount__c.field-meta.xml
<CustomField>
    <fullName>fm_IsExAccount__c</fullName>
    <formula>ISBLANK(Account.CustomerID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fm_IsExAccount</label>
    <type>Checkbox</type>
</CustomField>