force-app/main/default/objects/Opportunity/fields/fm_IsRegionalRestrictionYN__c.field-meta.xml
<CustomField>
    <fullName>fm_IsRegionalRestrictionYN__c</fullName>
    <formula>IF(ISBLANK(prtcptPsblRgnNm__c ), False , True )</formula>
    <label>fm_IsRegionalRestrictionYN</label>
    <type>Checkbox</type>
</CustomField>