force-app/main/default/objects/Opportunity/fields/fm_IsRequestMDMReg__c.field-meta.xml
<CustomField>
    <fullName>fm_IsRequestMDMReg__c</fullName>
    <formula>Account.IsRequestMDMReg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fm_IsRequestMDMReg</label>
    <type>Checkbox</type>
</CustomField>