force-app/main/default/objects/Opportunity/fields/fm_OurTeam__c.field-meta.xml
<CustomField>
    <fullName>fm_OurTeam__c</fullName>
    <formula>IF( Text(Owner.Team__c) = Text( $User.Team__c ) , &quot;Y&quot; , &quot;N&quot; )</formula>
    <label>OurTeam</label>
    <type>Text</type>
</CustomField>