force-app/main/default/objects/Opportunity/fields/fm_ProgressRate__c.field-meta.xml
<CustomField>
    <fullName>fm_ProgressRate__c</fullName>
    <formula>Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>fm_ProgressRate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>