force-app/main/default/objects/Opportunity/fields/fm_Proposal_ApplicationBalanceAmountAB__c.field-meta.xml
<CustomField>
    <fullName>fm_Proposal_ApplicationBalanceAmountAB__c</fullName>
    <formula>Proposal_UrgentB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal_fm_ApplicationBalanceAmountAB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>