force-app/main/default/objects/Opportunity/fields/Frozen__c.field-meta.xml
<CustomField>
    <fullName>Frozen__c</fullName>
    <label>Frozen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>