force-app/main/default/objects/Opportunity/fields/Gen__c.field-meta.xml
<CustomField>
    <fullName>Gen__c</fullName>
    <label>Gen</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>