force-app/main/default/objects/Opportunity/fields/GenShipping__c.field-meta.xml
<CustomField>
    <fullName>GenShipping__c</fullName>
    <label>Gen Shipping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>