force-app/main/default/objects/Opportunity/fields/HasDeposit__c.field-meta.xml
<CustomField>
    <fullName>HasDeposit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>보증금 여부</description>
    <label>Has Deposit?</label>
    <type>Checkbox</type>
</CustomField>