force-app/main/default/objects/Opportunity/fields/IncentivePercentage__c.field-meta.xml
<CustomField>
    <fullName>IncentivePercentage__c</fullName>
    <label>Incentive(%)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>