force-app/main/default/objects/Opportunity/fields/IndustryLimitYN__c.field-meta.xml
<CustomField>
    <fullName>IndustryLimitYN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>나라장터 입찰 공고의 업종 제한 여부</description>
    <label>Industry Limit Y/N</label>
    <type>Checkbox</type>
</CustomField>