force-app/main/default/objects/Opportunity/fields/IRRPct__c.field-meta.xml
<CustomField>
    <fullName>IRRPct__c</fullName>
    <label>IRRPct</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>