force-app/main/default/objects/Opportunity/fields/IsBlindYN__c.field-meta.xml
<CustomField>
    <fullName>IsBlindYN__c</fullName>
    <defaultValue>false</defaultValue>
    <description>입찰공고 블라인드 여부</description>
    <label>Blind Y/N</label>
    <type>Checkbox</type>
</CustomField>