force-app/main/default/objects/Opportunity/fields/IsCatering__c.field-meta.xml
<CustomField>
    <fullName>IsCatering__c</fullName>
    <defaultValue>false</defaultValue>
    <description>캐터링여부</description>
    <label>Is Catering</label>
    <type>Checkbox</type>
</CustomField>