force-app/main/default/objects/Opportunity/fields/IsDrop__c.field-meta.xml
<CustomField>
    <fullName>IsDrop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Drop</label>
    <type>Checkbox</type>
</CustomField>