force-app/main/default/objects/Opportunity/fields/IsReBidYN__c.field-meta.xml
<CustomField>
    <fullName>IsReBidYN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReBid Y/N</label>
    <type>Checkbox</type>
</CustomField>