force-app/main/default/objects/Opportunity/fields/lcnsLmtNm__c.field-meta.xml
<CustomField>
    <fullName>lcnsLmtNm__c</fullName>
    <label>lcnsLmtNm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>