force-app/main/default/objects/Opportunity/fields/LossReasonDetails__c.field-meta.xml
<CustomField>
    <fullName>LossReasonDetails__c</fullName>
    <label>Loss Reason Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>