force-app/main/default/objects/Opportunity/fields/MainIngredients__c.field-meta.xml
<CustomField>
    <fullName>MainIngredients__c</fullName>
    <label>Main Ingredients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>