force-app/main/default/objects/Opportunity/fields/ManufacturingCost__c.field-meta.xml
<CustomField>
    <fullName>ManufacturingCost__c</fullName>
    <label>ManufacturingCost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>