force-app/main/default/objects/Opportunity/fields/MgmtProfit__c.field-meta.xml
<CustomField>
    <fullName>MgmtProfit__c</fullName>
    <label>MgmtProfit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>