force-app/main/default/objects/Opportunity/fields/MonthlySales__c.field-meta.xml
<CustomField>
    <fullName>MonthlySales__c</fullName>
    <label>Monthly Sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>