force-app/main/default/objects/Opportunity/fields/NumberOfExclSKU__c.field-meta.xml
<CustomField>
    <fullName>NumberOfExclSKU__c</fullName>
    <formula>Frozen__c  +  Refrigerated__c +  RoomTemparature__c +  GenShipping__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Excl SKU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>