force-app/main/default/objects/Opportunity/fields/OperationOfExclusiveGoods__c.field-meta.xml
<CustomField>
    <fullName>OperationOfExclusiveGoods__c</fullName>
    <label>Operation of Exclusive goods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>