force-app/main/default/objects/Opportunity/fields/OtherTermsOfTransaction__c.field-meta.xml
<CustomField>
    <fullName>OtherTermsOfTransaction__c</fullName>
    <label>Other terms of transaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>